# ouka2-app

./: .gitignore  README_SERVER.md  package-lock.json
scripts/: download-ffmpeg.cjs
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs
src-tauri/src/radio/: sii.rs  stream.rs
src-tauri/src/utils/: ffmpeg.rs
src/api/: index.ts
src/components/: StationCard.vue
src/stores/: radio.ts
src/utils/: siiGenerator.ts
