[package]
name = "ouka2-app"
version = "0.1.1"
description = "欧卡2中国电台桌面应用 - 将云听电台转换为欧卡2可用格式"
authors = ["you"]
edition = "2021"

[lib]
name = "ouka2_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# Tauri 核心 (可选，仅用于桌面模式)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 嵌入式 HTTP 服务器
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# MD5 签名
md5 = "0.7"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 有序映射
indexmap = "2"

# 日志
log = "0.4"
env_logger = "0.11"

# 路径和目录
dirs = "5"

# 异步通道
tokio-stream = "0.1"

# URL 编码
urlencoding = "2"

# 随机数
rand = "0.8"

# 嵌入静态文件 (可选，仅用于桌面模式)
rust-embed = { version = "8.5", optional = true }
# MIME 类型检测（服务器必需）
mime_guess = "2.0"

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-opener", "tauri-build", "rust-embed"]
server = []

[[bin]]
name = "ouka2-server"
path = "src/bin/ouka2-server.rs"
required-features = ["server"]